Adding stubs of code for tutorial articles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,6 +41,9 @@
 				</a>
 			</li>
 			<li class="nav-item">
+				<a class="nav-link" [routerLink]="['/observables']" routerLinkActive="active">Observables</a>
+			</li>
+			<li class="nav-item">
 				<a class="nav-link" [routerLink]="['/router-reuse']" routerLinkActive="active">Router Reuse</a>
 			</li>
 			<li class="nav-item">
